--- a/break-before.html
+++ b/break-before.html
@@ -22,7 +22,7 @@ h2 {
 section {
   width: 300px;
   padding: 10px;
-  outline: 3px solid tomato;
+  border: 3px solid tomato;
   margin-bottom: 20px;
 }
 h2 {
@@ -31,7 +31,7 @@ h2 {
   margin-top: 0;
 }
 p {
-  outline: 2px dashed #ccc;
+  border : 2px dashed #ccc;
   padding: 5px;
 }
 </style>
