--- a/break-inside.html
+++ b/break-inside.html
@@ -19,7 +19,7 @@ h2 {
 section {
   width: 300px;
   padding: 10px;
-  outline: 3px solid tomato;
+  border: 3px solid tomato;
   margin-bottom: 20px;
 }
 h2 {
@@ -28,7 +28,7 @@ h2 {
   margin-top: 0;
 }
 p {
-  outline: 2px dashed #ccc;
+  border: 2px dashed #ccc;
 }
 </style>
 </head>
